@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.66 2005/02/06 07:40:43 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.67 2005/02/07 01:18:21 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  6 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Initial code for quickpkg GRP support.
 
   6 Feb 2005; Preston Cody <codeman@gentoo.org>
   check for dhcp in the network stuff and emerge it if it is.
